--- a/sort/排序和搜索.md
+++ b/sort/排序和搜索.md
@@ -25,3 +25,16 @@
 ### 冒泡排序的时间复杂度
 * 两个嵌套循环
 * 时间复杂度：o(n^2)
+
+### 选择排序的思路
+* 找到数组中的最小值，选中它并将其放置在第一位
+* 接着找到第二小的值，选中它并将其放置在第二位
+* 以此类推，执行n-1轮
+
+### 选择排序的时间复杂度
+* 两个嵌套循环
+* 时间复杂度：o(n^2)
+
+### 插入排序的思路
+* 从第二个数开始往前比
+* 比它大就往后排
