--- a/sort/排序和搜索.md
+++ b/sort/排序和搜索.md
@@ -38,3 +38,31 @@
 ### 插入排序的思路
 * 从第二个数开始往前比
 * 比它大就往后排
+
+### 插入排序的时间复杂度
+* 两个嵌套循环
+* 时间复杂度：o(n^2) 
+
+### 归并排序的思路
+* 分：把数组劈成两半，再递归地对子数组进行“分”操作，直到分成一个个单独的数
+* 合：把两个数合并为有序数组，再对有序数组进行合并，直到全部子数组合并为一个完整数组
+
+### 合并两个有序数组
+* 新建一个空数组res,用于存放最终排序后的数组
+* 比较两个有序数组的头部，较小者出队并推入res中
+* 如果两个数组还有值，就重复第二步
+  
+### 归并排序的时间复杂度
+* 分的时间复杂度是o(logN)
+* 合的时间复杂度是o(n)
+* 时间复杂度：o(n*logN)
+  
+###　快速排序的思路
+* 分区：从数组中任意选择一个“基准”，所有比基准小的元素放在基准前面，比基准大的元素放在基准的后面
+* 递归：递归地对基准前后的子数组进行分区
+
+### 快速排序的时间复杂度
+* 递归的时间复杂度是o(logN)
+* 分区的时间复杂度是o(n)
+* 时间复杂度：o(n*logN)
+
